objects/Template_Merge_Field__c.object
<CustomObject>
    <fields>
        <fullName>API_Name__c</fullName>
        <label>API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Column_Header__c</fullName>
        <label>Column Header</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plural_Name__c</fullName>
        <label>Plural Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Template__c</fullName>
        <label>Template</label>
        <referenceTo>Template__c</referenceTo>
        <relationshipLabel>Template Merge Fields</relationshipLabel>
        <relationshipName>Template_Merge_Fiels</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Template Merge Field</label>
    <nameField>
        <displayFormat>TMF-{0000000000}</displayFormat>
        <label>Template Merge Field Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Template Merge Fields</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>